tests/invalid/from_relative_import_nonexistent/main.py
from .nonexistent_mod import something
